--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^5.0.0",
+    "gulp-imagemin": "^9.1.0",
     "gulp-sass": "^6.0.0",
     "sass": "^1.83.1"
   }
