--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp": "^5.0.0",
     "gulp-imagemin": "^9.1.0",
     "gulp-sass": "^6.0.0",
+    "gulp-uglify": "^3.0.2",
     "sass": "^1.83.1"
   }
 }
